; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_slab_common.c_krealloc.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_slab_common.c_krealloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZERO_SIZE_PTR = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @krealloc(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i64, i64* %6, align 8
  %10 = icmp ne i64 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i64 @unlikely(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @kfree(i8* %16)
  %18 = load i8*, i8** @ZERO_SIZE_PTR, align 8
  store i8* %18, i8** %4, align 8
  br label %37

19:                                               ; preds = %3
  %20 = load i8*, i8** %5, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i8* @__do_krealloc(i8* %20, i64 %21, i32 %22)
  store i8* %23, i8** %8, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %35

26:                                               ; preds = %19
  %27 = load i8*, i8** %5, align 8
  %28 = call i64 @kasan_reset_tag(i8* %27)
  %29 = load i8*, i8** %8, align 8
  %30 = call i64 @kasan_reset_tag(i8* %29)
  %31 = icmp ne i64 %28, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %26
  %33 = load i8*, i8** %5, align 8
  %34 = call i32 @kfree(i8* %33)
  br label %35

35:                                               ; preds = %32, %26, %19
  %36 = load i8*, i8** %8, align 8
  store i8* %36, i8** %4, align 8
  br label %37

37:                                               ; preds = %35, %15
  %38 = load i8*, i8** %4, align 8
  ret i8* %38
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @kfree(i8*) #1

declare dso_local i8* @__do_krealloc(i8*, i64, i32) #1

declare dso_local i64 @kasan_reset_tag(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
